added an initial front end for the products table.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -378,6 +378,16 @@
     <li *ngFor="let user of usersList">{{user.username}}</li>
   </ul>
 
+  <div style="text-align:center">
+    <h1>Products</h1>
+  </div>
+
+  <h2>Here is a list of Products: </h2>
+
+  <ul>
+    <li *ngFor="let product of productsList">{{product.name}}</li>
+  </ul>
+
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
